# SH1106_GUI_Design

./: .gitignore  CMakeLists.txt  DrawTool.cpp  DrawTool.h  README.md  SH1106_GUI_Design-251119.rar  SH1106_GUI_Design.7z  SH1106_GUI_Design.rar  SH1106_GUI_Design_1203.rar  SH1106_GUI_Design_sandbox-1109.rar  SH1106_GUI_Design_sandbox-1207.rar  SH1106_GUI_Design_sandbox_1214.rar  SH1106_GUI_Design_sandbox_temp-1107.rar  SH1106_GUI_Design_sandbox_temp-1112.rar  SH1106_GUI_Design_sandbox_temp-1113.rar  SH1106_GUI_Design_sandbox_temp-1114.rar  SH1106_GUI_Design_sandbox_temp-1125.rar  SH1106_GUI_Design_sandbox_temp-1205.rar  SH1106_GUI_Design_sandbox_temp.rar  ToolType.h  backup2.bat  config.h  historymanager.cpp  historymanager.h  imageimportdialog.cpp  imageimportdialog.h  imageimportdialog.ui  main.cpp  mainwindow - 複製.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  oled_dataconverter.cpp  oled_dataconverter.h  oled_datamodel.cpp  oled_datamodel.h  oleddataconverter.cpp  oleddataconverter.h  oleddatamodel.cpp  oleddatamodel.h  (+21 more)
DOC/: Layout.txt  [ 使用者操作 _ 事件 (mouse, key, paintEvent) ].txt  oledwidget.cpp  todo.list  架構圖.txt  類別和方法的列表.txt
icon/include File/: M.h  Wifi.h  battery-100.h  battery-50.h  battery-75.h
